--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>sn.isi.l3gl.core</groupId>
 	<artifactId>task-core</artifactId>
-	<version>0.2.0-SNAPSHOT</version>
+	<version>0.3.0</version>
 	<name>task-core</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
@@ -91,6 +91,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
+                    <skip>true</skip>
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
